--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -685,6 +685,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_Parking\FrmCarEntry.resx">
       <DependentUpon>FrmCarEntry.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="View_Parking\FrmCraneScheme.resx">
       <DependentUpon>FrmCraneScheme.cs</DependentUpon>
