--- a/UACSControls/UACSControls.csproj
+++ b/UACSControls/UACSControls.csproj
@@ -62,12 +62,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\IrisSkin2.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -84,6 +89,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\UACSPopupForm.dll</HintPath>
     </Reference>
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CraneMonitorModel\conAreaModel.cs" />
@@ -422,6 +430,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\FrmSaddleShow.resx">
       <DependentUpon>FrmSaddleShow.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\InitForm.resx">
       <DependentUpon>InitForm.cs</DependentUpon>
