--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -93,9 +93,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Microsoft.QualityTools.Testing.Fakes.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -120,6 +124,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\UACSPopupForm.dll</HintPath>
     </Reference>
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CLTSHMI\FrmAddOrder.cs">
@@ -830,7 +837,6 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
