--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -171,6 +171,18 @@
     <Compile Include="View_CraneMonitor\Frm_Yard2Yard_ByCar_Plan.designer.cs">
       <DependentUpon>Frm_Yard2Yard_ByCar_Plan.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\L3_MAT_Weight_Info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\L3_MAT_Weight_Info.designer.cs">
+      <DependentUpon>L3_MAT_Weight_Info.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View_CraneMonitor\L3_MAT_Out_Info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\L3_MAT_Out_Info.designer.cs">
+      <DependentUpon>L3_MAT_Out_Info.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\RedStockInquiry.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -645,6 +657,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\HandAutoModeMessage.resx">
       <DependentUpon>HandAutoModeMessage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\L3_MAT_Weight_Info.resx">
+      <DependentUpon>L3_MAT_Weight_Info.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\L3_MAT_Out_Info.resx">
+      <DependentUpon>L3_MAT_Out_Info.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\RedStockInquiry.resx">
       <DependentUpon>RedStockInquiry.cs</DependentUpon>
