--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -159,6 +159,12 @@
     <Compile Include="CLTSHMI\FrmCLTS_YARD_TO_CAR.designer.cs">
       <DependentUpon>FrmCLTS_YARD_TO_CAR.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\FG_Order_Oper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\FG_Order_Oper.designer.cs">
+      <DependentUpon>FG_Order_Oper.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\Frm_02StatusCoil_Yard2Yard_Plan.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -182,6 +188,12 @@
     </Compile>
     <Compile Include="View_CraneMonitor\L3_MAT_Out_Info.designer.cs">
       <DependentUpon>L3_MAT_Out_Info.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View_CraneMonitor\L3_MAT_Weight_Info2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\L3_MAT_Weight_Info2.Designer.cs">
+      <DependentUpon>L3_MAT_Weight_Info2.cs</DependentUpon>
     </Compile>
     <Compile Include="View_CraneMonitor\RedStockInquiry.cs">
       <SubType>Form</SubType>
@@ -640,6 +652,9 @@
     <EmbeddedResource Include="View_CraneMonitor\CraneOrderHisyManage.resx">
       <DependentUpon>CraneOrderHisyManage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\FG_Order_Oper.resx">
+      <DependentUpon>FG_Order_Oper.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\FrmLogForm.resx">
       <DependentUpon>FrmLogForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -663,6 +678,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\L3_MAT_Out_Info.resx">
       <DependentUpon>L3_MAT_Out_Info.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\L3_MAT_Weight_Info2.resx">
+      <DependentUpon>L3_MAT_Weight_Info2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\RedStockInquiry.resx">
       <DependentUpon>RedStockInquiry.cs</DependentUpon>
