更新-20221223-修复[行车作业实绩查询]页面只能打开一次问题

--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -165,6 +165,12 @@
     <Compile Include="View_CraneMonitor\FG_Order_Oper.designer.cs">
       <DependentUpon>FG_Order_Oper.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\FG_Order_Oper1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\FG_Order_Oper1.Designer.cs">
+      <DependentUpon>FG_Order_Oper1.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\Frm_02StatusCoil_Yard2Yard_Plan.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -654,6 +660,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\FG_Order_Oper.resx">
       <DependentUpon>FG_Order_Oper.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\FG_Order_Oper1.resx">
+      <DependentUpon>FG_Order_Oper1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\FrmLogForm.resx">
       <DependentUpon>FrmLogForm.cs</DependentUpon>
