更新解决方案

--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -201,6 +201,12 @@
     <Compile Include="View_CraneMonitor\L3_MAT_Weight_Info2.Designer.cs">
       <DependentUpon>L3_MAT_Weight_Info2.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\MaterialCellManage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\MaterialCellManage.designer.cs">
+      <DependentUpon>MaterialCellManage.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\RedStockInquiry.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -690,6 +696,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\L3_MAT_Weight_Info2.resx">
       <DependentUpon>L3_MAT_Weight_Info2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\MaterialCellManage.resx">
+      <DependentUpon>MaterialCellManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\RedStockInquiry.resx">
       <DependentUpon>RedStockInquiry.cs</DependentUpon>
