--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -729,6 +729,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\StatForm.resx">
       <DependentUpon>StatForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\StockDefine.resx">
       <DependentUpon>StockDefine.cs</DependentUpon>
