--- a/UACSControls/UACSControls.csproj
+++ b/UACSControls/UACSControls.csproj
@@ -400,6 +400,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\conCrane.resx">
       <DependentUpon>conCrane.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\conParkingCarHead.resx">
       <DependentUpon>conParkingCarHead.cs</DependentUpon>
