--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -207,6 +207,12 @@
     <Compile Include="View_Parking\FrmWaterTank.designer.cs">
       <DependentUpon>FrmWaterTank.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_Parking\SelectCoilByL3FormNew.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_Parking\SelectCoilByL3FormNew.Designer.cs">
+      <DependentUpon>SelectCoilByL3FormNew.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_Parking\TagPTInEnd.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -750,6 +756,9 @@
     <EmbeddedResource Include="View_Parking\SelectCoilByL3Form.resx">
       <DependentUpon>SelectCoilByL3Form.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_Parking\SelectCoilByL3FormNew.resx">
+      <DependentUpon>SelectCoilByL3FormNew.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_Parking\SelectCoilForm.resx">
       <DependentUpon>SelectCoilForm.cs</DependentUpon>
