更新-20230310 1.新增[装料实绩查询]画面，修改实绩、发送Tag。 2.主监控画面停车位详细。 3.车辆配载明细。 4.行车报警。 5.装车配载物料名称清空、车头方向默认值、排序。

--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -147,6 +147,12 @@
     <Compile Include="CLTSHMI\FrmCLTS_YARD_TO_CAR.designer.cs">
       <DependentUpon>FrmCLTS_YARD_TO_CAR.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\Achievements_Feed.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\Achievements_Feed.Designer.cs">
+      <DependentUpon>Achievements_Feed.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\FG_Order_Oper1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -643,6 +649,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View_CraneMonitor\Achievements_Feed.resx">
+      <DependentUpon>Achievements_Feed.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\CraneOrderHisyManage.resx">
       <DependentUpon>CraneOrderHisyManage.cs</DependentUpon>
     </EmbeddedResource>
