--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -768,6 +768,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_Parking\SelectCoilByL3FormNew.resx">
       <DependentUpon>SelectCoilByL3FormNew.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="View_Parking\SelectCoilForm.resx">
       <DependentUpon>SelectCoilForm.cs</DependentUpon>
