--- a/UACSControls/UACSControls.csproj
+++ b/UACSControls/UACSControls.csproj
@@ -389,6 +389,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\conParkingCar.resx">
       <DependentUpon>conParkingCar.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\conCrane.resx">
       <DependentUpon>conCrane.cs</DependentUpon>
