更新-20230407 1.行车右键增加日志。 2.增加行车状态。 3.增加装料实际查询模拟装料。 4.增加检修状态。 5.

--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -189,6 +189,12 @@
     <Compile Include="View_CraneMonitor\MaterialCellManage.designer.cs">
       <DependentUpon>MaterialCellManage.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\Recondition.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\Recondition.Designer.cs">
+      <DependentUpon>Recondition.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\RedStockInquiry.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -684,6 +690,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\MaterialCellManage.resx">
       <DependentUpon>MaterialCellManage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\Recondition.resx">
+      <DependentUpon>Recondition.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\RedStockInquiry.resx">
       <DependentUpon>RedStockInquiry.cs</DependentUpon>
