更新-20230410 - 增加矫正高度窗体 1.新增矫正高度密码确认。 2.修改行车指令管理按照当天日期查询。 3.增加检修页面默认当前的X坐标位。 4.修复检修状态重启后控件不闪红。

--- a/UACSPopupForm/UACSPopupForm.csproj
+++ b/UACSPopupForm/UACSPopupForm.csproj
@@ -70,6 +70,12 @@
     <Compile Include="CraneMonitor\CoilAway.Designer.cs">
       <DependentUpon>CoilAway.cs</DependentUpon>
     </Compile>
+    <Compile Include="CraneMonitor\FrmCorrectionHeight.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CraneMonitor\FrmCorrectionHeight.Designer.cs">
+      <DependentUpon>FrmCorrectionHeight.cs</DependentUpon>
+    </Compile>
     <Compile Include="CraneMonitor\FrmCraneConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -158,6 +164,9 @@
   <ItemGroup>
     <EmbeddedResource Include="CraneMonitor\CoilAway.resx">
       <DependentUpon>CoilAway.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CraneMonitor\FrmCorrectionHeight.resx">
+      <DependentUpon>FrmCorrectionHeight.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\FrmCraneConfig.resx">
       <DependentUpon>FrmCraneConfig.cs</DependentUpon>
