--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -159,6 +159,12 @@
     <Compile Include="View_CraneMonitor\FG_Order_Oper1.Designer.cs">
       <DependentUpon>FG_Order_Oper1.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\FrmCubicleClean.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\FrmCubicleClean.Designer.cs">
+      <DependentUpon>FrmCubicleClean.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\Frm_02StatusCoil_Yard2Yard_Plan.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -663,6 +669,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\FG_Order_Oper1.resx">
       <DependentUpon>FG_Order_Oper1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\FrmCubicleClean.resx">
+      <DependentUpon>FrmCubicleClean.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\FrmLogForm.resx">
       <DependentUpon>FrmLogForm.cs</DependentUpon>
