--- a/UACSPopupForm/UACSPopupForm.csproj
+++ b/UACSPopupForm/UACSPopupForm.csproj
@@ -130,6 +130,12 @@
     <Compile Include="CraneMonitor\PopAlarmCurrent.designer.cs">
       <DependentUpon>PopAlarmCurrent.cs</DependentUpon>
     </Compile>
+    <Compile Include="CraneMonitor\SuctionAndReplenishment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CraneMonitor\SuctionAndReplenishment.Designer.cs">
+      <DependentUpon>SuctionAndReplenishment.cs</DependentUpon>
+    </Compile>
     <Compile Include="CraneMonitor\TrolleyFrmYardToYardRequest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -195,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\PopAlarmCurrent.resx">
       <DependentUpon>PopAlarmCurrent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CraneMonitor\SuctionAndReplenishment.resx">
+      <DependentUpon>SuctionAndReplenishment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\TrolleyFrmYardToYardRequest.resx">
       <DependentUpon>TrolleyFrmYardToYardRequest.cs</DependentUpon>
