--- a/UACSControls/UACSControls.csproj
+++ b/UACSControls/UACSControls.csproj
@@ -171,6 +171,12 @@
     <Compile Include="CraneMonitor\conUnitSaddle.designer.cs">
       <DependentUpon>conUnitSaddle.cs</DependentUpon>
     </Compile>
+    <Compile Include="CraneMonitor\FrmSaddleShowYardmapGrid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CraneMonitor\FrmSaddleShowYardmapGrid.Designer.cs">
+      <DependentUpon>FrmSaddleShowYardmapGrid.cs</DependentUpon>
+    </Compile>
     <Compile Include="CraneMonitor\FormMessageBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -416,6 +422,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\conUnitSaddle.resx">
       <DependentUpon>conUnitSaddle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CraneMonitor\FrmSaddleShowYardmapGrid.resx">
+      <DependentUpon>FrmSaddleShowYardmapGrid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\FormMessageBox.resx">
       <DependentUpon>FormMessageBox.cs</DependentUpon>
