--- a/UACSView/UACSView.csproj
+++ b/UACSView/UACSView.csproj
@@ -99,6 +99,7 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -165,6 +166,12 @@
     <Compile Include="View_CraneMonitor\FrmCubicleClean.Designer.cs">
       <DependentUpon>FrmCubicleClean.cs</DependentUpon>
     </Compile>
+    <Compile Include="View_CraneMonitor\FrmFromStockRule.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\FrmFromStockRule.Designer.cs">
+      <DependentUpon>FrmFromStockRule.cs</DependentUpon>
+    </Compile>
     <Compile Include="View_CraneMonitor\FrmYardToCarStrategy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -224,6 +231,12 @@
     </Compile>
     <Compile Include="View_CraneMonitor\Welcome.Designer.cs">
       <DependentUpon>Welcome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View_CraneMonitor\FrmYardToCarStrategyMini.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View_CraneMonitor\FrmYardToCarStrategyMini.Designer.cs">
+      <DependentUpon>FrmYardToCarStrategyMini.cs</DependentUpon>
     </Compile>
     <Compile Include="View_CraneMonitor\Z01_library_Monitor.cs">
       <SubType>Form</SubType>
@@ -685,6 +698,9 @@
     <EmbeddedResource Include="View_CraneMonitor\FrmCubicleClean.resx">
       <DependentUpon>FrmCubicleClean.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\FrmFromStockRule.resx">
+      <DependentUpon>FrmFromStockRule.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\FrmLogForm.resx">
       <DependentUpon>FrmLogForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -732,6 +748,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\WMSCraneOrderConfig.resx">
       <DependentUpon>WMSCraneOrderConfig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View_CraneMonitor\FrmYardToCarStrategyMini.resx">
+      <DependentUpon>FrmYardToCarStrategyMini.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View_CraneMonitor\Z01_library_Monitor.resx">
       <DependentUpon>Z01_library_Monitor.cs</DependentUpon>
