更新-20230614 1.HMI可以调整废钢品种的装槽顺序。 2. 无人行车装料完成后自动弹出装槽实绩画面，点击提交菜单完成发送装槽实绩至L3系统，点击取消则不提交发送装槽实绩。 3.其他优化。

--- a/UACSPopupForm/UACSPopupForm.csproj
+++ b/UACSPopupForm/UACSPopupForm.csproj
@@ -217,6 +217,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UnitMonitor\FrmUnitRotateRequest.resx">
       <DependentUpon>FrmUnitRotateRequest.cs</DependentUpon>
@@ -234,6 +235,9 @@
       <Project>{d3f6ff21-68b2-40e4-9d1c-603eb926c87c}</Project>
       <Name>UACSDAL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\up_btn.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
