--- a/UACSControls/UACSControls.csproj
+++ b/UACSControls/UACSControls.csproj
@@ -177,6 +177,12 @@
     <Compile Include="CraneMonitor\conUnitSaddle.designer.cs">
       <DependentUpon>conUnitSaddle.cs</DependentUpon>
     </Compile>
+    <Compile Include="CraneMonitor\FrmPlanCompletionBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CraneMonitor\FrmPlanCompletionBox.Designer.cs">
+      <DependentUpon>FrmPlanCompletionBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="CraneMonitor\FrmSaddleShowYardmapGrid.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -443,6 +449,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\conUnitSaddle.resx">
       <DependentUpon>conUnitSaddle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CraneMonitor\FrmPlanCompletionBox.resx">
+      <DependentUpon>FrmPlanCompletionBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CraneMonitor\FrmSaddleShowYardmapGrid.resx">
       <DependentUpon>FrmSaddleShowYardmapGrid.cs</DependentUpon>
